--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "@dim.iliev/arguments-parser",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Small library to help with parsing cli args from string.",
+  "main": "./dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rm -rf dist types && tsc"
   },
-  "author": "",
-  "license": "ISC",
+  "types": "./types/index.d.ts",
+  "author": "dimitar.iliev.github@gmail.com",
+  "license": "GPL-3.0-or-later",
+  "repository": {
+    "type": "git",
+    "url": "https+git://github.com/dim-iliev/arguments-parser.git"
+  },
   "devDependencies": {
     "@types/jest": "^29.2.5",
     "jest": "^29.3.1",
